force-app/main/default/objects/ByPassSettings__c/ByPassSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Gérer les ByPass au niveau des triggers</description>
    <label>ByPassSettings</label>
</CustomObject>