force-app/main/default/objects/ByPassSettings__c/fields/AccountContactRelationTrigger__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRelationTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountContactRelationTrigger</label>
    <type>Checkbox</type>
</CustomField>