force-app/main/default/objects/ByPassSettings__c/fields/AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>AccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gérer les bypass au niveau su trigger Account</description>
    <label>AccountTrigger</label>
    <type>Checkbox</type>
</CustomField>