force-app/main/default/objects/ByPassSettings__c/fields/BatchApexErrorEventTrigger__c.field-meta.xml
<CustomField>
    <fullName>BatchApexErrorEventTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BatchApexErrorEventTrigger</label>
    <type>Checkbox</type>
</CustomField>