force-app/main/default/objects/ByPassSettings__c/fields/CaseTrigger__c.field-meta.xml
<CustomField>
    <fullName>CaseTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gérer les bypass au niveau su trigger Case</description>
    <label>CaseTrigger</label>
    <type>Checkbox</type>
</CustomField>