force-app/main/default/objects/ByPassSettings__c/fields/ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>ContactTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactTrigger</label>
    <type>Checkbox</type>
</CustomField>