force-app/main/default/objects/ByPassSettings__c/fields/EmailMessageTrigger__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailMessageTrigger</label>
    <type>Checkbox</type>
</CustomField>