force-app/main/default/objects/ByPassSettings__c/fields/EventTrigger__c.field-meta.xml
<CustomField>
    <fullName>EventTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@Project: MyPower
@Description: ByPass Event trigger</description>
    <label>EventTrigger</label>
    <type>Checkbox</type>
</CustomField>