force-app/main/default/objects/ByPassSettings__c/fields/HP_ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>HP_ContactTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_ContactTrigger</label>
    <type>Checkbox</type>
</CustomField>