force-app/main/default/objects/ByPassSettings__c/fields/HP_KnowledgeTrigger__c.field-meta.xml
<CustomField>
    <fullName>HP_KnowledgeTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_KnowledgeTrigger</label>
    <type>Checkbox</type>
</CustomField>