force-app/main/default/objects/ByPassSettings__c/fields/HP_PortailUtilisateurTrigger__c.field-meta.xml
<CustomField>
    <fullName>HP_PortailUtilisateurTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_PortailUtilisateurTrigger</label>
    <type>Checkbox</type>
</CustomField>