force-app/main/default/objects/ByPassSettings__c/fields/HP_SouscriptionTrigger__c.field-meta.xml
<CustomField>
    <fullName>HP_SouscriptionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_SouscriptionTrigger</label>
    <type>Checkbox</type>
</CustomField>