force-app/main/default/objects/ByPassSettings__c/fields/LeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>LeadTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gérer les ByPass au niveau du trigger du lead</description>
    <label>LeadTrigger</label>
    <type>Checkbox</type>
</CustomField>