force-app/main/default/objects/ByPassSettings__c/fields/MP_OrderTrigger__c.field-meta.xml
<CustomField>
    <fullName>MP_OrderTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@Project: MyPower
@Description: ByPass Order trigger</description>
    <label>MP_OrderTrigger</label>
    <type>Checkbox</type>
</CustomField>