force-app/main/default/objects/ByPassSettings__c/fields/MP_SuiviInstallation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>MP_SuiviInstallation_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@Project: MyPower
@Description: ByPass SuiviInstallation trigger</description>
    <label>MP_SuiviInstallation_Trigger</label>
    <type>Checkbox</type>
</CustomField>