force-app/main/default/objects/ByPassSettings__c/fields/OpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>OpportunityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gérer les bypass au niveau du trigger Oppty</description>
    <label>OpportunityTrigger</label>
    <type>Checkbox</type>
</CustomField>