force-app/main/default/objects/ByPassSettings__c/fields/PrestationDistributeurTrigger__c.field-meta.xml
<CustomField>
    <fullName>PrestationDistributeurTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrestationDistributeurTrigger</label>
    <type>Checkbox</type>
</CustomField>