force-app/main/default/objects/ByPassSettings__c/fields/ProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>ProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@Project: MyPower
@Description: ByPass des process builders</description>
    <label>ProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>