force-app/main/default/objects/ByPassSettings__c/fields/ValidationRule__c.field-meta.xml
<CustomField>
    <fullName>ValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@Project: MyPower
@Description: ByPass des validation rules</description>
    <label>ValidationRule</label>
    <type>Checkbox</type>
</CustomField>