force-app/main/default/objects/ByPassSettings__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@Project: MyPower
@Description: ByPass des workflows</description>
    <label>Workflow</label>
    <type>Checkbox</type>
</CustomField>